2015-08-18  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/hppa/bits/epoll.h: New file.
	* sysdeps/unix/sysv/linux/hppa/sys/epoll.h: Delete.

2015-08-18  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/hppa/bits/sigaction.h (SA_RESETHAND,
	SA_NODEFER, SA_RESTART): Define when __USE_XOPEN2K8 is defined.

2015-08-18  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/hppa/bits/shm.h (SHM_EXEC): Define.

2015-08-18  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/hppa/bits/atomic.h: Delete
	kernel-features.h include.  Delete __ASSUME_LWS_CAS checks.
	* sysdeps/unix/sysv/linux/hppa/kernel-features.h
	(__ASSUME_LWS_CAS): Delete.

2015-08-18  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/hppa/configure.ac: Delete binutils tls checks.
	* sysdeps/hppa/configure: Regenerated.
	* sysdeps/hppa/dl-machine.h: Delete USE_TLS and USE___THREAD checks.
	* sysdeps/hppa/libc-tls.c: Delete USE_TLS checks.
	* sysdeps/hppa/nptl/tls.h: Likewise.

2015-08-17  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18823]
	* math/s_csqrt.c (__csqrt): Increase threshold and scale factor
	for scaling up small arguments.
	* math/s_csqrtf.c (__csqrtf): Likewise.
	* math/s_csqrtl.c (__csqrtl): Likewise.
	* math/auto-libm-test-in: Add more tests of csqrt.
	* math/auto-libm-test-out: Regenerated.

2015-08-17  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/powerpc/Versions (libm): Add empty
	version set GLIBC_2.19.

2015-08-16  Zack Weinberg  <zackw@panix.com>

	[BZ #18681]
	* misc/regexp.h: This interface is no longer supported.
	Remove all contents, leaving only an #error directive.
	* misc/regexp.c (loc1, loc2, locs, step, advance):
	Demote to compatibility symbols.

2015-08-15  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #18084]
	* debug/tst-backtrace2.c (do_test): Add test for BZ #18084.
	* sysdeps/arm/backtrace.c (__backtrace): Handle size <= 0.
	* sysdeps/i386/backtrace.c (__backtrace): Likewise.