@@ -12,19 +12,14 @@
    Lesser General Public License for more details.
 
    You should have received a copy of the GNU Lesser General Public
-   License along with the GNU C Library.  If not, see
+   License along with the GNU C Library; if not, see
    <http://www.gnu.org/licenses/>.  */
 
 #ifndef	_SYS_EVENTFD_H
-#define	_SYS_EVENTFD_H	1
+# error "Never use <bits/eventfd.h> directly; include <sys/eventfd.h> instead."
+#endif
 
-#include <stdint.h>
-
-
-/* Type for event counter.  */
-typedef uint64_t eventfd_t;
-
-/* Flags for signalfd.  */
+/* Flags for eventfd.  */
 enum
   {
     EFD_SEMAPHORE = 1,
@@ -34,20 +29,3 @@ enum
     EFD_NONBLOCK = 00200004 /* HPUX has separate NDELAY & NONBLOCK */
 #define EFD_NONBLOCK EFD_NONBLOCK
   };
-
-
-__BEGIN_DECLS
-
-/* Return file descriptor for generic event channel.  Set initial
-   value to COUNT.  */
-extern int eventfd (unsigned int __count, int __flags) __THROW;
-
-/* Read event counter and possibly wait for events.  */
-extern int eventfd_read (int __fd, eventfd_t *__value);
-
-/* Increment event counter.  */
-extern int eventfd_write (int __fd, eventfd_t __value);
-
-__END_DECLS
-
-#endif /* sys/eventfd.h */
